syntax = "proto3";

package article;

option go_package = "/proto";

message Article {
  string title = 1;
  string description = 2;
  string body = 3;
  int32 counts = 4;
  repeated string tagList = 5;
}

message CreateArticleRequest {
  Article article = 1;
}

message CreateArticleResponse {
  string title = 1;
}

message GetArticleRequest {
  string title = 1;
}

message GetArticleResponse {
  Article article = 1;
}

message UpdateArticleRequest {
  Article title = 1;
}
message UpdateArticleResponse {
  Article article = 1;
}

message DeleteArticleRequest {
  string title = 1;
}

message DeleteArticleResponse {
  string title = 1;
}

service ArticleService {
  rpc CreateArticle(CreateArticleRequest) returns (CreateArticleResponse);
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse);
  rpc UpdateArticle(UpdateArticleRequest) returns (UpdateArticleResponse);
  rpc DeleteArticle(DeleteArticleRequest) returns (DeleteArticleResponse);
}